plugins {
	id 'java'
	id 'checkstyle'
}

repositories {
	mavenLocal()
	maven {
		url = 'https://repo.runelite.net'
		content {
			includeGroupByRegex("net\\.runelite.*")
		}
	}
	mavenCentral()
}

def runeLiteVersion = 'latest.release'

dependencies {
	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion

	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'

	testImplementation 'junit:junit:4.12'
	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
}

group = 'com.bettermonsterexamine'
version = '1.0'

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.release.set(11)
}

checkstyle {
	maxWarnings = 0
	toolVersion = '8.36'
	configDirectory = file("$rootDir")
	configFile = file('checkstyle.xml')
}

// Launch a dev RuneLite client with this plugin loaded (via the test main()).
tasks.register('run', JavaExec) {
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'com.bettermonsterexamine.BetterMonsterExaminePluginTest'

	jvmArgs "-ea"
	args "--developer-mode", "--debug"
}

// Like 'run', but against a throwaway RuneLite home (build/dev-home) instead of your real ~/.runelite.
// RuneLite derives every dir from user.home, so overriding it gives a pristine profile: none of your
// side-loaded hub plugins load and only the default-on built-ins start — a much lighter client for
// testing this plugin in isolation. The home persists between runs (build/ is gitignored), so this
// plugin's caches are only re-downloaded once.
//
// It seeds only your RuneLite-account session (credentials.properties + session) from your real home
// so you stay logged in — deliberately NOT the config profile, which lists your side-loaded plugins
// and would drag them back in. build/ is gitignored, so the copied session is never committed.
tasks.register('runClean', JavaExec) {
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'com.bettermonsterexamine.BetterMonsterExaminePluginTest'

	def devHome = layout.buildDirectory.dir('dev-home').get().asFile
	doFirst {
		def devRl = new File(devHome, '.runelite')
		devRl.mkdirs()
		def realRl = new File(System.getProperty('user.home'), '.runelite')
		['credentials.properties', 'session'].each { name ->
			def src = new File(realRl, name)
			if (src.isFile()) {
				java.nio.file.Files.copy(src.toPath(), new File(devRl, name).toPath(),
					java.nio.file.StandardCopyOption.REPLACE_EXISTING)
			}
		}
	}
	jvmArgs "-ea", "-Duser.home=${devHome}"
	args "--developer-mode", "--debug"
}

// Dev-only: render the in-game overlay states (all tabs / each highlight mode) to PNGs.
tasks.register('previewOverlay', JavaExec) {
	group = 'verification'
	classpath = sourceSets.test.runtimeClasspath
	getMainClass().set('com.bettermonsterexamine.OverlayPreview')
	systemProperty 'java.awt.headless', 'false'
}
